# esp-flasher-stub

./: .astyle-rules.yml  .check_copyright_config.yaml  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE-MIT  README.md  TODO.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build_and_release.yml  host_tests.yml  jira.yml  publish_npm.yml  size_report_comment.yml
cmake/: esp-targets.cmake
docs/: architecture.md  development-guide.md  nand-flash.md  plugin-system.md
docs/plugins/: nand-flash.md  sdmmc.md
soc/: CMakeLists.txt
soc/common/: soc.c  watchdog_common.c
soc/include/: soc.h
soc/include/peripherals/: usb_otg.h  watchdog.h
soc/targets/: esp32.c  esp32c2.c  esp32c3.c  esp32c5.c  esp32c6.c  esp32c61.c  esp32h2.c  esp32p4.c  esp32s2.c  esp32s3.c  esp8266.c
src/: CMakeLists.txt  command_handler.c  command_handler.h  commands.h  diag_plugin.c  endian_utils.h  frame_buffer.c  frame_buffer.h  keymanager_plugin.c  main.c  main.cpp  miniz.cpp  miniz.hpp  nand.c  nand.h  nand_plugin.c  plugin_table.h  sdmmc_plugin.c  slip.c  slip.cpp  slip.h  spi2_nand.c  spi2_nand.h  stub_log.h  transport.c  transport.h
src/ld/: common.ld  diag_plugin.ld  esp32.ld  esp32c2.ld  esp32c3.ld  esp32c5.ld  esp32c6.ld  esp32c61.ld  esp32h2.ld  esp32h21.ld  esp32h4.ld  esp32p4-rev1.ld  esp32p4.ld  esp32s2.ld  esp32s3.ld  esp32s31.ld  esp8266.ld  keymanager_plugin.ld  nand_plugin.ld  sdmmc_plugin.ld
tools/: build_all_chips.sh  build_chip.sh  compare_sizes.py  compute_plugin_addrs.py  elf2json.py  export_toolchains.sh  generate_npm_package.mjs  install_all_chips.sh  setup_toolchains.sh
unittests/: CMakeLists.txt  README.md  run_tests.sh  test_slip.cpp
unittests/host/: CMakeLists.txt  TestNandPlugin.c  TestPluginFPT.c  TestSlip.c  cmock_config.yml  compile_flags.txt  run-tests.sh
unittests/host/soc/: soc_caps.h
unittests/mocks/: rom_functions.cpp
unittests/scripts/: create_mock_with_callbacks.rb  generate_mocks.sh
unittests/support/: LogMock.h
